# stone

./: .cpp  CMakeLists.txt  GUIDE.md  IDEA.stone  IDEAS.cpp  LICENSE  NOTES.txt  README.md  SPEC.md  Sample.stone  Stone.sublime-syntax  TEMP.cpp  TODO.txt  a.out  concept.cpp  stone.vim  tmp.cpp
.vim/: .vimrc
.vim/ftdetect/: cram.vim  raw.vim  stone.vim
.vim/syntax/: cpp.vim  cram.vim  go.vim  raw.vim  stone.vim
cmake/modules/: AddFormat.cmake  AddGRPC.cmake  AddSetup.cmake  AddStone.cmake  CMakeLists.txt  Go.cmake  StoneConfig.cmake.in  StoneCore.cmake  StoneFormat.cmake  StoneProperties.cmake  StoneTblGen.cmake  StoneUnitTests.cmake
compiler/: CMakeLists.txt
compiler/include/: CMakeLists.txt
compiler/lib/: CMakeLists.txt
compiler/lib/Support/: Action.cpp  CMakeLists.txt  DiagIDList.cpp  Diagnostic.cpp  DiagnosticConsumer.cpp  DiagnosticEmitter.cpp  DiagnosticEngine.cpp  DiagnosticFormatter.cpp  DiagnosticList.cpp  InputFile.cpp  LexerSupport.cpp  Options.cpp  PrimaryAction.cpp  StatisticEngine.cpp  Statistics.cpp  StatsReporter.cpp  TextDiagnosticConsumer.cpp  TextDiagnosticEmitter.cpp  TextDiagnosticFormatter.cpp
include/stone/: CMakeLists.txt  Context.h  Strings.h  config.h.cmake
lib/: Assert.stone  CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTScope.cpp  Builtin.cpp  CMakeLists.txt  ClangImporter.cpp  Comment.cpp  Decl.cpp  DeclContext.cpp  DeclName.cpp  DeclState.cpp  DiagnosticList.cpp  Diagnostics.cpp  Expr.cpp  Generics.cpp  Identifier.cpp  Module.cpp  Property.cpp  Stmt.cpp  Template.cpp  Type.cpp  TypeCheckDecl.cpp  TypeCheckExpr.cpp  TypeCheckStmt.cpp  TypeCheckType.cpp  TypeCheckVisibility.cpp  TypeChecker.cpp  Visibility.cpp
lib/Analyze/: CMakeLists.txt  Check.cpp  CheckDecl.cpp  CheckExpr.cpp  CheckStmt.cpp  Checker.cpp  Lexer.cpp  Parse.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp
lib/Basic/: Basic.cpp  BumpTable.cpp  CMakeLists.txt  Cache.cpp  Clock.cpp  Context.cpp  DarwinCache.inc  DiagIDList.cpp  Diagnostic.cpp  DiagnosticEmitter.cpp  DiagnosticEngine.cpp  DiagnosticFormatter.cpp  DiagnosticListener.cpp  DiagnosticTransaction.cpp  EditorPlaceholder.cpp  File.cpp  FileEntry.cpp  FileMgr.cpp  FileSystem.cpp  FileType.cpp  Fmt.cpp  LLVMContext.cpp  LangOptions.cpp  LangVersion.cpp  OutputFileMap.cpp  PipelineEngine.cpp  Source.cpp  SrcLoc.cpp  SrcMgr.cpp  StableHasher.cpp  StatisticEngine.cpp  Stats.cpp  SystemOptions.cpp  TextDiagnosticEmitter.cpp  TextDiagnosticFormatter.cpp  TextDiagnosticListener.cpp  Timer.cpp  TokenKind.cpp  TokenType.cpp  Version.cpp
lib/Clang/: CMakeLists.txt  ClangDecl.cpp  ClangModuleImporter.cpp  ClangNode.cpp
lib/CodeAnalysis/: CMakeLists.txt  CheckDecl.cpp  CheckExpr.cpp  CheckStmt.cpp  Lexer.cpp  LexerCache.cpp  Parse.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp  TypeCheck.cpp  TypeCheckDecl.cpp  TypeCheckExpr.cpp  TypeCheckStmt.cpp  TypeChecker.cpp
lib/CodeGen/: CMakeLists.txt  CodeEmitter.cpp  CodeGenBackend.cpp  CodeGenBlocks.cpp  CodeGenBuilder.cpp  CodeGenDecl.cpp  CodeGenExpr.cpp  CodeGenFunction.cpp  CodeGenModule.cpp  CodeGenPassManager.cpp  CodeGenType.cpp  CodeGenerator.cpp  Gen.cpp  GenClass.cpp  GenDecl.cpp  GenFun.cpp  GenInterface.cpp  GenStruct.cpp  GenType.cpp  Native.cpp  Optimize.cpp
lib/Collections/: Array.stone  List.stone  Queue.stone
lib/Compile/: CMakeLists.txt  Check.cpp  CheckDecl.cpp  CheckExpr.cpp  CheckStmt.cpp  Checker.cpp  CodeAnalysis.cpp  CodeGen.cpp  CodeGeneration.cpp  CodeOptimization.cpp  Compilable.cpp  CompilableFactory.cpp  CompilableItem.cpp  Compile.cpp  CompileInputFile.cpp  Compiler.cpp  CompilerAction.cpp  CompilerDiagnosticFormatter.cpp  CompilerFrontend.cpp  CompilerInputsAndOutputs.cpp  CompilerInputsConverter.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  CompilerOptions.cpp  CompilerOutputsConverter.cpp  CompilerWorkspace.cpp  ComputeFrontendOptions.cpp  Confusable.cpp  DebugFrontendListener.cpp  DebugLangListener.cpp  FormatDiagnosticText.cpp  Frontend.cpp  FrontendArguments.cpp  FrontendInputsAndOutputs.cpp  FrontendInputsConverter.cpp  FrontendInstance.cpp  FrontendInvocation.cpp  FrontendOptions.cpp  FrontendOptionsConverter.cpp  FrontendOutputsConverter.cpp  (+41 more)
lib/Console/: Print.stone
lib/Core/: Assert.stone  Basic.cpp  BumpTable.cpp  CMakeLists.txt  Char.cpp  Clock.cpp  Context.cpp  DiagIDList.cpp  Diagnostic.cpp  DiagnosticEmitter.cpp  DiagnosticEngine.cpp  DiagnosticFormatter.cpp  DiagnosticListener.cpp  DiagnosticTransaction.cpp  DirScanner.cpp  EditorPlaceholder.cpp  File.cpp  FileEntry.cpp  FileMgr.cpp  FileSystem.cpp  FileSystemStatCache.cpp  Fmt.cpp  LLVMContext.cpp  OutputFileMap.cpp  PipelineEngine.cpp  SrcLoc.cpp  SrcMgr.cpp  StatisticEngine.cpp  Stats.cpp  SystemOptions.cpp  TextDiagnosticEmitter.cpp  TextDiagnosticFormatter.cpp  TextDiagnosticListener.cpp  Timer.cpp  TokenKind.cpp  TokenType.cpp  Version.cpp  WinDirWatcher.cpp
lib/Diag/: CMakeLists.txt  DiagnosticClient.cpp  DiagnosticEmitter.cpp  DiagnosticEngine.cpp  DiagnosticFormatLexer.cpp  DiagnosticFormatParser.cpp  DiagnosticFormatter.cpp  DiagnosticFormatting.cpp  DiagnosticID.cpp  DiagnosticTextLexer.cpp  DiagnosticTextParser.cpp  FormatDiagnosticText.cpp  TextDiagnosticBuffering.cpp  TextDiagnosticEmitter.cpp  TextDiagnosticFormatter.cpp  TextDiagnosticPrinter.cpp
lib/Diagnostics/: CMakeLists.txt  Diagnostics.cpp
lib/Driver/: Activity.cpp  AssembleJob.cpp  BuildSystem.cpp  CMakeLists.txt  Command.cpp  Compilation.cpp  CompilationJob.cpp  CompilationModel.cpp  CompilationUnit.cpp  CompileJob.cpp  ComputeDriverOptions.cpp  Darwin.cpp  DarwinToolChain.cpp  Driver.cpp  DriverArguments.cpp  DriverOptions.cpp  DriverWorkspace.cpp  Intent.cpp  Job.cpp  JobBuilder.cpp  JobQueue.cpp  JobRequest.cpp  LinkJob.cpp  Main.cpp  ParseDriverArgs.cpp  Request.cpp  Run.cpp  (+4 more)
lib/Support/: CMakeLists.txt  CharInfo.cpp  Confusable.cpp
scripts/: build-project.sh  format-code.sh  setup-debug.sh  setup-project.sh  setup-release.sh
system/: Assert.stone  String.stone
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tryit/: CMakeLists.txt  tryit.cpp
(+1963 files in other folders)
